feat: sonarqube, sonar issues and file rendering fixes